add content to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -49,11 +49,22 @@
 
 <!--section-->
     <section>
-        <h1 class="uppercase">Milly Armstrong Clark</h1>
-        <h2 class="uppercase">Comedian</h2>
-        <h2 class="uppercase">Morale Queen</h2>
-        <h2 class="uppercase">Professional Tea-Drinker</h2>
-        <p> this is a test of paragraph color </p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col intro-text">
+                    <h1 class="uppercase">Milly Armstrong Clark</h1> 
+                        <br>      
+                        <h2 class="uppercase">Stand Up Comedian</h2>
+                        <br>
+                        <h2 class="uppercase">Morale Queen</h2>
+                        <br>
+                        <h2 class="uppercase">Professional Tea Drinker</h2>
+                </div>
+                <div class="col">
+                    <img class="head-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                </div>
+            </div>
+        </div>
     </section>
 <!--/.section-->
 
