change header and footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col intro-text">
+                <div class="col-12 col-md-6 intro-text">
                     <h1 class="uppercase">Milly Armstrong Clark</h1> 
                         <br>      
                         <h2 class="uppercase">Stand Up Comedian</h2>
@@ -74,25 +74,25 @@
             <div class="col">
                     <ul class="list-inline social-links">
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="https://www.facebook.com">
                                 <i class="fa fa-facebook" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="https://www.twitter.com">
                                 <i class="fa fa-twitter" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="https://www.instagram.com/millcomedy/">
                                 <i class="fa fa-instagram" aria-hidden="true"></i>
                                 <span class="sr-only">Instagram</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
                                 <i class="fa fa-youtube" aria-hidden="true"></i>
                                 <span class="sr-only">YouTube</span>
                             </a>
