add about.html content and improve header and footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css">
-        <style>
+     <style>
         body {
             background-image: url(assets/img/background.jpg);
             background-repeat: no-repeat;
@@ -19,7 +19,7 @@
 
 <body>
 <!--header-->
-    <header class="container-fluid">
+    <header class="container">
         <div class="row">
             <div class="col">
                 <ul id="nav" class="list-inline nav-fill menucontainer">
@@ -51,7 +51,7 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 col-md-6 intro-text">
+                <div class="col intro-text">
                     <h1 class="uppercase">Milly Armstrong Clark</h1> 
                         <br>      
                         <h2 class="uppercase">Stand Up Comedian</h2>
