changes made to about.html and css file

--- a/about.html
+++ b/about.html
@@ -55,21 +55,27 @@
                     <h2 class="uppercase about-header">About Milly</h2>
                     <br>
                     <p>
-                        Yorkshire-born comedian Milly Armstrong Clark started stand up in 2019 as a way to subsidise her Yorkshire Tea addiction, and beguile strangers with her frankly ludicrous life.
-                        Her first gig was in York, shortly after she was wrongfully accused of telling a small woman to go back to the circus, so every gig since has been a massive improvement.
+                        Milly Armstrong Clark is a Yorkshire comedian born and raised in the quaint town of Malton. Throughout her early years, she loved nothing more than to film herself pretending to be elderly women,
+                        which scientists believe may be a defect caused by consuming literally nothing but Yorkshire Tea and pickled gherkins since birth.         
+                        <br><br> 
+                        Milly got into stand up in 2019 as a way to subsidise her Yorkshire Tea addiction and avoid having to get a "real" job. Her style has been described as loveably quriky and accidentally intellectual.
+                        Pulling anicdotes from her mildly ridiculous life, Milly weaves a hilarious narrative with observations of her encounters - from sex shop drive bys to 3am cake baking sessions - and a splash of the delightfully macabre to offer a unique and side-splitting performance.
+                        Her first gig was in York, shortly after she was wrongfully accused of telling a small woman to go back to the circus, so every gig since has been a massive improvement by simply not being shouted at in a queue.
                         <br><br>
-                        When Milly isn't up on stage, she hosts a weekly podcast <a href="podcast.html">Tea with the Morale Queen</a> wherein she sits down with a new guest each week and shares positive
-                        stories over a good cuppa. Her guests come from all walks of life, and are guaranteed to put a smile on your face!
+                        When Milly isn't up on stage, she hosts a weekly podcast <a class="podcast-plug" href="podcast.html">Tea with the Morale Queen</a> in which she sits down with a new guest each week to share positive
+                        and morale-boosting stories over a good cuppa. Her guests come from all walks of life, and are guaranteed to put a smile on your face!
                         <br><br>
                         Ever the Jack of all trades, Milly is also writing a sitcom based on the goings on at a seaside campsite (keep an eye out for it on TV), and is writing a part-autobiographical, 
                         part-wild musings book entitled "Tales from under the Carrot Tree", which is due for release in all your local bookstores just as soon as she finishes writing the damn thing.
                         <br><br>
-                        Milly lives with her husband Rob, a golden retriever called Poppy (or somethings Div dog), two cats named Xena and Kya, and a bearded dragon called Ziggard Christoper Stark Junior (or Ziggy for short).
-                        You can keep up to date with all things Milly related by following her on Instagram, Facebook, Twitter or YouTube.
+                        Milly lives with her husband Rob, a golden retriever called Poppy (or sometimes Div dog), two cats named Xena and Kya, and a bearded dragon called Ziggard Christoper Stark Junior (or Ziggy for short).
+                        You can keep up to date with all things Milly related by following her on <a class="podcast-plug" target="_blank" href="https://www.instagram.com/millcomedy/"> Instagram,</a> 
+                        <a class="podcast-plug" target="_blank" href="https://www.facebook.com"> Facebook,</a> <a class="podcast-plug" target="_blank" href="https://www.twitter.com">Twitter</a>
+                        or <a class="podcast-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
                     </p>
                 </div>
                 <div class="col">
-                    <img class="head-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                    <img class="about-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                 </div>
             </div>
         </div>
