--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="container">
         <div class="row">
             <div class="col">
-                <ul id="nav" class="list-inline nav-fill menucontainer">
+                <ul id="nav" class="list-inline menucontainer">
                     <li class="list-inline-item menuitem">
                         <a href="index.html" class="nav-item active">Home</a>
                     </li>
