--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css">
      <style>
@@ -62,16 +62,16 @@
                         Pulling anicdotes from her mildly ridiculous life, Milly weaves a hilarious narrative with observations of her encounters - from sex shop drive bys to 3am cake baking sessions - and a splash of the delightfully macabre to offer a unique and side-splitting performance.
                         Her first gig was in York, shortly after she was wrongfully accused of telling a small woman to go back to the circus, so every gig since has been a massive improvement by simply not being shouted at in a queue.
                         <br><br>
-                        When Milly isn't up on stage, she hosts a weekly podcast <a class="podcast-plug" href="podcast.html">Tea with the Morale Queen</a> in which she sits down with a new guest each week to share positive
+                        When Milly isn't up on stage, she hosts a weekly podcast <a class="link-plug" href="podcast.html">Tea with the Morale Queen</a> in which she sits down with a new guest each week to share positive
                         and morale-boosting stories over a good cuppa. Her guests come from all walks of life, and are guaranteed to put a smile on your face!
                         <br><br>
                         Ever the Jack of all trades, Milly is also writing a sitcom based on the goings on at a seaside campsite (keep an eye out for it on TV), and is writing a part-autobiographical, 
                         part-wild musings book entitled "Tales from under the Carrot Tree", which is due for release in all your local bookstores just as soon as she finishes writing the damn thing.
                         <br><br>
                         Milly lives with her husband Rob, a golden retriever called Poppy (or sometimes Div dog), two cats named Xena and Kya, and a bearded dragon called Ziggard Christoper Stark Junior (or Ziggy for short).
-                        You can keep up to date with all things Milly related by following her on <a class="podcast-plug" target="_blank" href="https://www.instagram.com/millcomedy/"> Instagram,</a> 
-                        <a class="podcast-plug" target="_blank" href="https://www.facebook.com"> Facebook,</a> <a class="podcast-plug" target="_blank" href="https://www.twitter.com">Twitter</a>
-                        or <a class="podcast-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
+                        You can keep up to date with all things Milly related by following her on <a class="link-plug" target="_blank" href="https://www.instagram.com/millcomedy/"> Instagram,</a> 
+                        <a class="link-plug" target="_blank" href="https://www.facebook.com"> Facebook,</a> <a class="link-plug" target="_blank" href="https://www.twitter.com">Twitter</a>
+                        or <a class="link-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
                     </p>
                 </div>
                 <div class="col">
