--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css">
      <style>
@@ -48,9 +48,67 @@
 <!--/.header-->
 
 <!--section-->
-    <section class="container-fluid">
-    
-    
+    <section id="news-container" class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <h2 class="uppercase">News</h2>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col">
+            <h3>28th October 2020</h3>
+            <br>
+            <p>
+            Milly was the guest on the latest episode of the Confidence For Breakfast podcast, hosted by fellow comedian and confidence queen, Mel Judson.
+            Milly shares her experience of body image, overcoming fears and insecurities and how to feel good about yourself!
+            <br>
+            You can listen to the episode with Milly, or binge all the episodes by clicking <a class="link-plug" href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank"> here. </a>
+            </p>
+        </div>
+        <div class="col">
+            <a href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank">
+                <img class="news-img" src="assets/img/confidence-podcast.jpg" alt="Confidence For Breakfast Podcast" title="Confidence for Breakfast Podcast"/>
+            </a>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col">
+            <h3>30th August 2020</h3>
+            <br>
+            <p>
+            It was back to business on Sunday 30th August as Milly performed at the Hull Comedy Festival at the marvelous Burton Constable Hall.
+            With the socially-distanced crowd set up on the grounds, it felt more like the festivals of yesteryear, which only made the night better. 
+            With an outstanding line up and the two best compares in the business running the night, everyone who came had an absolute blast of an evening.
+            <br>
+            It was an amazing experience being back up on stage after so many months without live comedy, so Milly went all out with a brand new set that went down a treat.
+            The set was recorded, so you can catch it in full by clicking on the Stand Up tab, or clicking <a class="link-plug" href="standup.html"> here. </a>
+            </p>
+        </div>
+        <div class="col">
+            <a href="standup.html">
+                <img class="news-img" src="assets/img/burton-constable.jpeg" alt="Milly at Burton Constable for Hull Comedy Festival" title="Burton Constable"/>
+            </a>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col">
+            <h3>8th July 2020</h3>
+            <br>
+            <p>
+            Milly guest starred on the hit new online panel show "Popped Culture" hosted by Eddie French with team captains Chris Lumb and Tom King and special guest Hannah Warman.
+            <br>
+            The episode is available to watch on YouTube via this <a class="link-plug" target="_blank" href="https://www.youtube.com/watch?v=lAvvAn2BcFs"> link. </a>
+            </p>
+        </div>
+        <div class="col">
+            <a href="https://www.youtube.com/watch?v=lAvvAn2BcFs" target="_blank">
+                <img class="news-img" src="assets/img/popped-culture.png" alt="Popped Culture Screenshot" title="Popped Culture"/>
+            </a>
+        </div>
+    </div>
     </section>
 <!--/.section-->
 
