--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col">
+        <div class="col-12 md-6">
             <h3>28th October 2020</h3>
             <br>
             <p>
@@ -66,7 +66,7 @@
             You can listen to the episode with Milly, or binge all the episodes by clicking <a class="link-plug" href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank"> here. </a>
             </p>
         </div>
-        <div class="col">
+        <div class="col-12 md-6">
             <a href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank">
                 <img class="news-img" src="assets/img/confidence-podcast.jpg" alt="Confidence For Breakfast Podcast" title="Confidence for Breakfast Podcast"/>
             </a>
@@ -74,7 +74,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col">
+        <div class="col-12 md-6">
             <h3>30th August 2020</h3>
             <br>
             <p>
@@ -86,7 +86,7 @@
             The set was recorded, so you can catch it in full by clicking on the Stand Up tab, or clicking <a class="link-plug" href="standup.html"> here. </a>
             </p>
         </div>
-        <div class="col">
+        <div class="col-12 md-6">
             <a href="standup.html">
                 <img class="news-img" src="assets/img/burton-constable.jpeg" alt="Milly at Burton Constable for Hull Comedy Festival" title="Burton Constable"/>
             </a>
@@ -94,7 +94,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col">
+        <div class="col-12 md-6">
             <h3>8th July 2020</h3>
             <br>
             <p>
@@ -103,12 +103,32 @@
             The episode is available to watch on YouTube via this <a class="link-plug" target="_blank" href="https://www.youtube.com/watch?v=lAvvAn2BcFs"> link. </a>
             </p>
         </div>
-        <div class="col">
+        <div class="col-12 md-6">
             <a href="https://www.youtube.com/watch?v=lAvvAn2BcFs" target="_blank">
                 <img class="news-img" src="assets/img/popped-culture.png" alt="Popped Culture Screenshot" title="Popped Culture"/>
             </a>
         </div>
     </div>
+     <br>
+    <div class="row">
+        <div class="col-12 md-6">
+            <h3>8th May 2020</h3>
+            <br>
+            <p>
+            Hold onto your hats, Milly Armstrong Clark is taking on the world of podcasting! 
+            Join Morale Queen and professional Tea Drinker Milly as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!
+            <br>
+            You can listen to the episode, or any future episodes by clicking <a class="link-plug" href="https://anchor.fm/millyarmstrongclark#:~:text=Join%20Morale%20Queen%20and%20professional,pie%20to%20brighten%20your%20day!" target="_blank"> here. </a>
+            </p>
+        </div>
+        <div class="col-12 md-6">
+            <a href="https://anchor.fm/millyarmstrongclark#:~:text=Join%20Morale%20Queen%20and%20professional,pie%20to%20brighten%20your%20day!" target="_blank">
+                <img class="news-img" src="assets/img/morale-queen-podcast.jpg" alt="Tea with the Morale Queen Podcast" title="Tea with the Morale Queen Podcast"/>
+            </a>
+        </div>
+    </div>
+    <br>
+    <br>
     </section>
 <!--/.section-->
 
