--- a/standup.html
+++ b/standup.html
@@ -49,8 +49,35 @@
 
 <!--section-->
     <section class="container-fluid">
-    
-    
+        <div class="row">
+            <div class="col">
+                <h2 class="uppercase">Stand Up</h2>
+            </div>
+        </div> 
+        <div class="row">
+            <div class="col">
+                <p>
+                Pulling anicdotes from her mildly ridiculous life, Milly weaves a hilarious narrative with observations of her encounters 
+                - from sex shop drive bys to 3am cake baking sessions - and a splash of the delightfully macabre to offer a unique and side-splitting performance.
+                <br>
+                Watch Milly's hilarous set via the videos below! 
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col">
+                <h3 class="uppercase">live at the Laughing Llama Comedy Club</h3>
+                <h4>11th Jan 2020</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col embed-responsive embed-responsive-16by9 standupclip">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fcBK3GJsaiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>  
+        <br>
+        <br> 
     </section>
 <!--/.section-->
 
