--- a/podcast.html
+++ b/podcast.html
@@ -48,10 +48,53 @@
 <!--/.header-->
 
 <!--section-->
-    <section class="container-fluid">
-    
-    
-    </section>
+    <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="jumbotron">
+                        <h1 class="uppercase">Tea with the Morale Queen</h1>
+                        <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-16-Freddie-Hayes-ekv8lr" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-15-Laura-Pollacco-ei43dg/a-a2ujnf0" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-14-Mel-Judson-ehp7b5/a-a2sm9es" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-13-Pixels-Green-ehdqrr/a-a2qp0vi" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-12-Saul-Henry-eh4rpd/a-a2p8ltj" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-11-Katy-D-egqulo/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-10-James-Bayes-eghf3h/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-9-Jed-Salisbury-eg82q9/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-8-Ryan-Stocks-efpi45/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-7-Annabelle-Devey-efl803/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-6-Roman-Armstrong-efb5k4/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-5-Sadie-Berry-eet7h5/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-4-Tanya-Spence-Kelly-eedioq/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-3-Matt-Hoss-eedikh/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-2-Carla-Harman-ee5t3f/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-1-Robert-Clark-edph1h/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                        <br>
+                        <br>
+                    </div>  
+                </div>
+                <div class="col">
+                    <img class="head-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                </div>
+            </div>
+        </div>
 <!--/.section-->
 
 <!--footer-->
