add navbar with dropdown functionality to all pages

--- a/contact.html
+++ b/contact.html
@@ -14,38 +14,43 @@
             background-size: cover;
         }
     </style>
-    <title>Milly Armstrong Clark</title>  
+    <title>Milly Armstrong Clark | Comedian, Morale Queen, Professional Tea Drinker</title>  
 </head>
 
 <body>
 <!--header-->
-    <header class="container">
-        <div class="row">
-            <div class="col">
-                <ul id="nav" class="list-inline nav-fill menucontainer">
-                    <li class="list-inline-item menuitem">
-                        <a href="index.html" class="nav-item">Home</a>
+    <header>
+        <nav class="navbar navbar-expand-sm fixed-top">
+            <button
+                class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active mr-2">
+                        <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="about.html" class="nav-item">About</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="podcast.html" class="nav-item">Podcast</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="podcast.html">Podcast</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="standup.html" class="nav-item">Stand Up</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="standup.html">Stand Up</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="news.html" class="nav-item">News</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news.html">News</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="contact.html" class="nav-item active">Contact</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
-        </div>
+        </nav> 
     </header>
 <!--/.header-->
+
 
 <!--section-->
     <section class="container-fluid">
