--- a/index.html
+++ b/index.html
@@ -14,44 +14,48 @@
             background-size: cover;
         }
     </style>
-    <title>Milly Armstrong Clark</title>  
+    <title>Milly Armstrong Clark | Comedian, Morale Queen, Professional Tea Drinker</title>  
 </head>
 
 <body>
 <!--header-->
-    <header class="container">
-        <div class="row">
-            <div class="col">
-                <ul id="nav" class="list-inline menucontainer">
-                    <li class="list-inline-item menuitem">
-                        <a href="index.html" class="nav-item active">Home</a>
+    <header>
+        <nav class="navbar navbar-expand-sm fixed-top">
+            <button
+                class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active mr-2">
+                        <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="about.html" class="nav-item">About</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="podcast.html" class="nav-item">Podcast</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="podcast.html">Podcast</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="standup.html" class="nav-item">Stand Up</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="standup.html">Stand Up</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="news.html" class="nav-item">News</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news.html">News</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="contact.html" class="nav-item">Contact</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
-        </div>
+        </nav> 
     </header>
 <!--/.header-->
 
 <!--section-->
     <section>
-        <div class="container-fluid">
+        <div id="home-container" class="container-fluid">
             <div class="row">
-                <div class="col intro-text">
+                <div class="col-md intro-text">
                     <h1 class="uppercase">Milly Armstrong Clark</h1> 
                         <br>      
                         <h2 class="uppercase">Stand Up Comedian</h2>
@@ -60,7 +64,7 @@
                         <br>
                         <h2 class="uppercase">Professional Tea Drinker</h2>
                 </div>
-                <div class="col">
+                <div class="col-md">
                     <img class="head-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                 </div>
             </div>
