--- a/news.html
+++ b/news.html
@@ -14,38 +14,43 @@
             background-size: cover;
         }
     </style>
-    <title>Milly Armstrong Clark</title>  
+    <title>Milly Armstrong Clark | Comedian, Morale Queen, Professional Tea Drinker</title>  
 </head>
 
 <body>
 <!--header-->
-    <header class="container">
-        <div class="row">
-            <div class="col">
-                <ul id="nav" class="list-inline nav-fill menucontainer">
-                    <li class="list-inline-item menuitem">
-                        <a href="index.html" class="nav-item">Home</a>
+    <header>
+        <nav class="navbar navbar-expand-sm fixed-top">
+            <button
+                class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active mr-2">
+                        <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="about.html" class="nav-item">About</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="podcast.html" class="nav-item">Podcast</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="podcast.html">Podcast</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="standup.html" class="nav-item">Stand Up</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="standup.html">Stand Up</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="news.html" class="nav-item active">News</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news.html">News</a>
                     </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="contact.html" class="nav-item">Contact</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
-        </div>
+        </nav> 
     </header>
 <!--/.header-->
+
 
 <!--section-->
     <section id="news-container" class="container-fluid">
@@ -56,7 +61,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-12 md-6">
+        <div class="col-lg md-8">
             <h3>28th October 2020</h3>
             <br>
             <p>
@@ -66,7 +71,7 @@
             You can listen to the episode with Milly, or binge all the episodes by clicking <a class="link-plug" href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank"> here. </a>
             </p>
         </div>
-        <div class="col-12 md-6">
+        <div class="col-lg md-4">
             <a href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank">
                 <img class="news-img" src="assets/img/confidence-podcast.jpg" alt="Confidence For Breakfast Podcast" title="Confidence for Breakfast Podcast"/>
             </a>
@@ -74,7 +79,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-12 md-6">
+        <div class="col-lg">
             <h3>30th August 2020</h3>
             <br>
             <p>
@@ -86,7 +91,7 @@
             The set was recorded, so you can catch it in full by clicking on the Stand Up tab, or clicking <a class="link-plug" href="standup.html"> here. </a>
             </p>
         </div>
-        <div class="col-12 md-6">
+        <div class="col-lg">
             <a href="standup.html">
                 <img class="news-img" src="assets/img/burton-constable.jpeg" alt="Milly at Burton Constable for Hull Comedy Festival" title="Burton Constable"/>
             </a>
@@ -94,7 +99,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-12 md-6">
+        <div class="col-lg">
             <h3>8th July 2020</h3>
             <br>
             <p>
@@ -103,7 +108,7 @@
             The episode is available to watch on YouTube via this <a class="link-plug" target="_blank" href="https://www.youtube.com/watch?v=lAvvAn2BcFs"> link. </a>
             </p>
         </div>
-        <div class="col-12 md-6">
+        <div class="col-lg">
             <a href="https://www.youtube.com/watch?v=lAvvAn2BcFs" target="_blank">
                 <img class="news-img" src="assets/img/popped-culture.png" alt="Popped Culture Screenshot" title="Popped Culture"/>
             </a>
@@ -111,7 +116,7 @@
     </div>
      <br>
     <div class="row">
-        <div class="col-12 md-6">
+        <div class="col-lg">
             <h3>8th May 2020</h3>
             <br>
             <p>
@@ -121,7 +126,7 @@
             You can listen to the episode, or any future episodes by clicking <a class="link-plug" href="https://anchor.fm/millyarmstrongclark#:~:text=Join%20Morale%20Queen%20and%20professional,pie%20to%20brighten%20your%20day!" target="_blank"> here. </a>
             </p>
         </div>
-        <div class="col-12 md-6">
+        <div class="col-lg">
             <a href="https://anchor.fm/millyarmstrongclark#:~:text=Join%20Morale%20Queen%20and%20professional,pie%20to%20brighten%20your%20day!" target="_blank">
                 <img class="news-img" src="assets/img/morale-queen-podcast.jpg" alt="Tea with the Morale Queen Podcast" title="Tea with the Morale Queen Podcast"/>
             </a>
