add margins to all pages

--- a/news.html
+++ b/news.html
@@ -53,7 +53,7 @@
 
 
 <!--section-->
-    <section id="news-container" class="container-fluid">
+    <section id="page-margin" class="container-fluid">
     <div class="row">
         <div class="col">
             <h2 class="uppercase">News</h2>
