--- a/podcast.html
+++ b/podcast.html
@@ -53,11 +53,10 @@
 
 
 <!--section-->
-    <div class="container-fluid">
+    <div class="container-fluid" id="page-margin">
             <div class="row">
-                <div class="col">
-                    <div class="jumbotron">
-                        <h2 class="uppercase">Tea with the Morale Queen</h2>
+                <div class="col-md">
+                    <h2 class="uppercase">Tea with the Morale Queen</h2>
                         <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                         <br>
                         <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-16-Freddie-Hayes-ekv8lr" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
@@ -92,10 +91,9 @@
                         <br>
                         <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-1-Robert-Clark-edph1h/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
                         <br>
-                        <br>
-                    </div>  
+                        <br> 
                 </div>
-                <div class="col">
+                <div class="col-md">
                     <img class="head-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                 </div>
             </div>
