--- a/standup.html
+++ b/standup.html
@@ -53,7 +53,7 @@
 
 
 <!--section-->
-    <section class="container-fluid">
+    <section class="container-fluid" id="page-margin">
         <div class="row">
             <div class="col">
                 <h2 class="uppercase">Stand Up</h2>
@@ -62,10 +62,11 @@
         <div class="row">
             <div class="col">
                 <p>
+                Milly has been a stand up comedian since 2019, but has been telling jokes and funny stories since she could talk. 
                 Pulling anicdotes from her mildly ridiculous life, Milly weaves a hilarious narrative with observations of her encounters 
                 - from sex shop drive bys to 3am cake baking sessions - and a splash of the delightfully macabre to offer a unique and side-splitting performance.
                 <br>
-                Watch Milly's hilarous set via the videos below! 
+                Watch Milly's hilarious set via the videos below! 
                 </p>
             </div>
         </div>
