--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
 
 <!--section-->
     <section>
-        <div class="container-fluid">
+        <div class="container-fluid" id="page-margin">
             <div class="row">
-                <div class="col about-text">
+                <div class="col-md about-text">
                     <h2 class="uppercase about-header">About Milly</h2>
                     <br>
                     <p>
@@ -78,7 +78,7 @@
                         or <a class="link-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
                     </p>
                 </div>
-                <div class="col">
+                <div class="col-md">
                     <img class="about-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                 </div>
             </div>
