--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 
 
 <!--section-->
-    <section class="container-fluid">
+    <section class="container-fluid" id="page-margin">
     <div class="row">
         <div class="col">
             <h2 class="uppercase">Contact Milly</h2>
@@ -75,6 +75,7 @@
                             <button type="submit" class="btn btn-secondary">Send Message</button>
                         </div>
                     </div>
+                </form>
             </div>
         </div>
     </div>
