--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <!--section-->
     <section>
-        <div id="home-container" class="container-fluid">
+        <div id="page-margin" class="container-fluid">
             <div class="row">
                 <div class="col-md intro-text">
                     <h1 class="uppercase">Milly Armstrong Clark</h1> 
