slight changes made

--- a/podcast.html
+++ b/podcast.html
@@ -55,7 +55,7 @@
 <!--section-->
     <div class="container-fluid" id="page-margin">
             <div class="row">
-                <div class="col-md">
+                <div class="col-md-8">
                     <h2 class="uppercase">Tea with the Morale Queen</h2>
                         <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                         <br>
@@ -93,7 +93,7 @@
                         <br>
                         <br> 
                 </div>
-                <div class="col-md">
+                <div class="col-md-4">
                     <img class="head-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                 </div>
             </div>
