--- a/standup.html
+++ b/standup.html
@@ -63,8 +63,9 @@
             <div class="col">
                 <p>
                 Milly has been a stand up comedian since 2019, but has been telling jokes and funny stories since she could talk. 
-                Pulling anicdotes from her mildly ridiculous life, Milly weaves a hilarious narrative with observations of her encounters 
-                - from sex shop drive bys to 3am cake baking sessions - and a splash of the delightfully macabre to offer a unique and side-splitting performance.
+                Pulling anicdotes from her mildly ridiculous life, Milly weaves a hilarious narrative combining tales from her more peculiar encounters 
+                (from sex shop drive bys to 3am cake baking sessions) in with observations of 21st century life (the maddening inconsistency of jeans) 
+                and adds a splash of the delightfully macabre to offer a unique and side-splitting performance.
                 <br>
                 Watch Milly's hilarious set via the videos below! 
                 </p>
