add updated images throughout site

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                     </p>
                 </div>
                 <div class="col-md">
-                    <img class="about-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                    <img class="about-image" src="assets/img/about.png" alt="Milly with her hands up" title="About Milly"/>
                 </div>
             </div>
         </div>
