--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                         <h2 class="uppercase">Professional Tea Drinker</h2>
                 </div>
                 <div class="col-md">
-                    <img class="head-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                    <img class="head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                    <img class="head-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly Armstrong Clark"/>
                 </div>
             </div>
         </div>
