--- a/news.html
+++ b/news.html
@@ -134,6 +134,11 @@
     </div>
     <br>
     <br>
+        <div id="img-row" class="row">
+            <div class="class">
+                <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+            </div>
+        </div>
     </section>
 <!--/.section-->
 
