--- a/podcast.html
+++ b/podcast.html
@@ -94,7 +94,7 @@
                         <br> 
                 </div>
                 <div class="col-md-4">
-                    <img class="head-image" src="assets/img/mill.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                    <img class="podcast-image" src="assets/img/mill.png" alt="Tea with the Morale Queen" title="Tea with the Morale Queen"/>
                 </div>
             </div>
         </div>
