--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <!--header-->
     <header>
-        <nav class="navbar navbar-expand-sm fixed-top">
+        <nav class="navbar navbar-expand-sm">
             <button
                 class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-md">
                     <img class="head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
-                    <img class="head-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly Armstrong Clark"/>
+                    <img class="head-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
                 </div>
             </div>
         </div>
