--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <body>
 <!--header-->
     <header>
-        <nav class="navbar navbar-expand-sm fixed-top">
+        <nav class="navbar navbar-expand-sm">
             <button
                 class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -82,6 +82,8 @@
                     <img class="about-image" src="assets/img/about.png" alt="Milly with her hands up" title="About Milly"/>
                 </div>
             </div>
+            <br>
+            <br>
         </div>
     </section>
 <!--/.section-->
