add more content to about section

--- a/about.html
+++ b/about.html
@@ -72,7 +72,11 @@
                         Ever the Jack of all trades, Milly is also writing a sitcom based on the goings on at a seaside campsite (keep an eye out for it on TV), and is writing a part-autobiographical, 
                         part-wild musings book entitled "Tales from under the Carrot Tree", which is due for release in all your local bookstores just as soon as she finishes writing the damn thing.
                         <br><br>
-                        Milly lives with her husband Rob, a golden retriever called Poppy (or sometimes Div dog), two cats named Xena and Kya, and a bearded dragon called Ziggard Christoper Stark Junior (or Ziggy for short).
+                        Outside of her comedic and creative pursuits, Milly is passionate about animals and wildlife. Milly attended the University of Cumbria, where she studied a degree in Wildlife and Media. 
+                        Her history includes a year-long volunteer apprenticeship with the Yorkshire Wildlife Trust, working at two vetinary surgeries in Yorkshire, handling with Birds of Prey, and working with the Cats Protection. 
+                        Milly has been involved in various fundraising projects to help a great number of wildlife and animal organisations, and is always keen to find ways to merge her passions together.
+                        <br><br>
+                        Milly lives with her band of waifs and strays, including husband Rob, a golden retriever called Poppy (or sometimes Div dog), two cats named Xena and Kya, and a bearded dragon called Ziggard Christoper Stark Junior (or Ziggy for short).
                         You can keep up to date with all things Milly related by following her on <a class="link-plug" target="_blank" href="https://www.instagram.com/millcomedy/"> Instagram,</a> 
                         <a class="link-plug" target="_blank" href="https://www.facebook.com"> Facebook,</a> <a class="link-plug" target="_blank" href="https://www.twitter.com">Twitter</a>
                         or <a class="link-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
