--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
                         <h2 class="uppercase">Professional Tea Drinker</h2>
                 </div>
                 <div class="col-md">
-                    <img class="head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
-                    <img class="head-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
+                    <figure class="swap-on-hover">
+                        <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                        <img class="swap-on-hoverhead-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
+                    </figure>    
                 </div>
             </div>
         </div>
