fix margins and add image to bottom of news page

--- a/about.html
+++ b/about.html
@@ -55,10 +55,10 @@
     <section>
         <div class="container-fluid" id="page-margin">
             <div class="row">
-                <div class="col-md about-text">
+                <div class="col-md">
                     <h2 class="uppercase about-header">About Milly</h2>
                     <br>
-                    <p>
+                    <p class="about-text">
                         Milly Armstrong Clark is a Yorkshire comedian born and raised in the quaint town of Malton. Throughout her early years, she loved nothing more than to film herself pretending to be elderly women,
                         which scientists believe may be a defect caused by consuming literally nothing but Yorkshire Tea and pickled gherkins since birth.         
                         <br><br> 
@@ -82,7 +82,7 @@
                         or <a class="link-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
                     </p>
                 </div>
-                <div class="col-md">
+                <div class="col-md d-none d-sm-block">
                     <img class="about-image" src="assets/img/about.png" alt="Milly with her hands up" title="About Milly"/>
                 </div>
             </div>
