--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <!--/.header-->
 
 <!--section-->
-    <section>
+    <section id="section-fit">
         <div id="page-margin" class="container-fluid">
             <div class="row">
                 <div class="col-md intro-text">
-                    <h1 class="uppercase">Milly Armstrong Clark</h1> 
+                    <h1 class="uppercase main-header-text">Milly Armstrong Clark</h1> 
                         <br>      
-                        <h2 class="uppercase">Stand Up Comedian</h2>
+                        <h2 class="uppercase header-text">Stand Up Comedian</h2>
                         <br>
-                        <h2 class="uppercase">Morale Queen</h2>
+                        <h2 class="uppercase header-text">Morale Queen</h2>
                         <br>
-                        <h2 class="uppercase">Professional Tea Drinker</h2>
+                        <h2 class="uppercase header-text">Professional Tea Drinker</h2>
                 </div>
-                <div class="col-md">
+                <div class="col-md homepage-image d-none d-sm-block">
                     <figure class="swap-on-hover">
                         <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                         <img class="swap-on-hoverhead-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
