add code to hide large images on mobile device for podcast page

--- a/about.html
+++ b/about.html
@@ -89,6 +89,11 @@
             <br>
             <br>
         </div>
+        <div id="img-row" class="row d-block d-sm-none">
+            <div class="col">
+                <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+            </div>
+        </div> 
     </section>
 <!--/.section-->
 
