--- a/podcast.html
+++ b/podcast.html
@@ -93,7 +93,7 @@
                         <br>
                         <br> 
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 d-none d-sm-block">
                     <img class="podcast-image" src="assets/img/mill.png" alt="Tea with the Morale Queen" title="Tea with the Morale Queen"/>
                 </div>
             </div>
